# azalea-graphics

./: .gitignore  Cargo.toml  README.md  flake.nix  timings.txt
azalea-graphics/: Cargo.toml  build.rs  timings.txt
azalea-graphics/azalea-assets/: Cargo.toml
azalea-graphics/azalea-assets/src/: entity.rs  lib.rs
azalea-graphics/azalea-assets/src/processed/: animation.rs  mod.rs  model.rs
azalea-graphics/azalea-assets/src/processed/atlas/: mod.rs  sticher.rs
azalea-graphics/azalea-assets/src/raw/: atlas.rs  block_state.rs  mod.rs
azalea-graphics/examples/: renderbot.rs
azalea-graphics/shaders/: Cargo.toml  aabb_debug.vert  hiz_copy.comp  hiz_reduce.comp  visibility.comp
azalea-graphics/shaders.bak/: aabb_debug.frag  aabb_debug.vert  hiz_reduce.comp  visibility.comp  water.frag
azalea-graphics/shaders/src/: debug.rs  entity.rs  hiz.rs  lib.rs  terrain.rs  ui.rs  visibility.rs
azalea-graphics/src/: plugin.rs
azalea-graphics/src/app/: mod.rs
azalea-graphics/src/renderer/: camera.rs  chunk.rs  frame_ctx.rs  hiz.rs  mesh.rs  mod.rs  render_targets.rs  texture_manager.rs  timings.rs  utils.rs
azalea-graphics/src/renderer/assets/: mod.rs
azalea-graphics/src/renderer/assets/processed/: mod.rs  model.rs
azalea-graphics/src/renderer/assets/raw/: block_state.rs  model.rs
azalea-graphics/src/renderer/entity_renderer/: mod.rs  pipelines.rs  render_pass.rs  types.rs
azalea-graphics/src/renderer/entity_renderer/state/: armed_entity.rs  biped.rs  entity.rs  living_entity.rs  mod.rs  zombie.rs
azalea-graphics/src/renderer/ui/: mod.rs  painter.rs  pipelines.rs
azalea-graphics/src/renderer/vulkan/: buffer.rs  context.rs  frame_sync.rs  image.rs  mod.rs  object.rs  texture.rs  timestamp.rs
azalea-graphics/src/renderer/world_renderer/: aabb_renderer.rs  animation.rs  descriptors.rs  hiz.rs  meshes.rs  mod.rs  pipelines.rs  render_pass.rs  render_targets.rs  staging.rs  types.rs  visibility.rs  world_pass.rs
azalea-graphics/src/renderer/world_renderer/mesher/: block.rs  block_colors.rs  helpers.rs  mod.rs  water.rs
azalea-graphics/src/renderer/world_renderer/visibility/: buffers.rs  compute.rs  (+1 more)
(+31 files in other folders)
