[package]
name = "azalea-graphics"
description = "Renderer for azalea"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ash = "0.38"
raw-window-handle = "0.6"
vk-mem = "0.5"
ash-window = "0.13"
winit = "0.30.12"
log.workspace = true

egui = "0.32"
egui-winit = "0.32"

glam.workspace = true
crossbeam = "0.8.4"
parking_lot.workspace = true
azalea.path = "../azalea/"
azalea.default-features = false
azalea.features = [ "serde", "packet-event"]
walkdir = "2.5.0"
serde.workspace = true
serde_json.workspace = true
image = "0.25.6"
thiserror.workspace = true
regex.workspace = true
simdnbt.workspace = true
anyhow.workspace = true
bytemuck = "1.23.2"
clap = {version = "4.5.48", features=["derive"]}
num_cpus = "1.17.0"
tracing.workspace = true
azalea-assets.workspace = true


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11"
anyhow = "1"

[build-dependencies]
cargo-gpu = {git = "https://github.com/rust-gpu/cargo-gpu", rev = "9561c1641a8cdd8fb59b65dde1c3d150337b7d11"}
